--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <button id="start-button" class="comic-button nevada-button">Comenzar Juego</button>
                     <p class="credits">Basado en la obra de H.G. Oesterheld y F. Solano López</p>
-                    <div class="street-sign">Plaza Italia</div>
+                    <div class="street-sign">Martínez</div>
                 </div>
             </section>
 
